--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,303 +1,407 @@
+body, html {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  color: #777777;
+  background: #4aaaa5;
+  background-image: url("../../../Responsive-Portfolio/assets/images/another.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
+body {
+  margin: 8px;
+}
+  
+* {
+  box-sizing: border-box;
+  border-radius: 5px;
+}
 
-  body {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
-    line-height: 2;
-    color:black;
-    background: #4aaaa5;
-    background-image: url("../images/dark-paths.png"); 
-  }
+.container {
+  width: 100%;
+  clear: both;        
+}
+    
+#main-container {
+  padding-top: 80px;
+  height: 100%;
+  margin-bottom: 60px;
+} 
+  
+.main-section {
+  text-align: left;
+  overflow: auto;
+  padding: 20px;
+  background-color: #043634;
+  border-color: #dddddd;
+  border: 1px solid;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  width: 100%;
+  max-width: 960px; 
+  margin-left: auto;
+  margin-right: auto; 
+  opacity: 0.9;
+}
+  
+header {
+  position:fixed;
+  width: 100%;
+  margin: -10px -10px 40px;
+  background-color: #043634;
+  border-color: #cccccc;
+  border-bottom:  2px  solid;
+  z-index: 99;
+  opacity: 0.9;
+}
 
-  * {
-    box-sizing: border-box;
-    border-radius: 5px;
-  }
+#logo {
+  float: left;
+  width: 250px;
+  height: 90px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 90px;
+  color: #ffffff;
+  text-align: center;
+  text-decoration: none;
+  background: #4aaaa5;
+  margin-left: 10px;
+}
 
-  .container {
-    width: 100%;
-    /* margin: 0 auto;
-    clear: both;         */
-  }
-  #trivia-block {
+nav {
+  float: right;
+  padding-top: 30px;
+  font-size: 24px;
+  height: 80px;
+}  
+
+nav a:hover:not(.active) {
+  background-color: #4aaaa5;
+}
+
+.navbar a {
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline;
+  padding: 0px 15px;      
+}
+
+.dropbtn {
+  color: white;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  border-right: 1px  solid #bbb;
+  border-radius: 0px;   
+  outline: none;
+  background-color: inherit;
+  font-family: inherit; 
+  margin: 0; 
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  width: 100%;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 10px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+h1,
+h2,
+h3 {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-weight: 700;
+}
+
+h1 {
+  font-size: 24px;
+  margin: 20px 0;
+  color: #4aaaa5;
+} 
+  
+h2 {
+  padding-top: 20px;
+  color: white;
+}
+
+a {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-size: 16px;
+  color: #4aaaa5;
+  text-align: center;
+  text-decoration: none;
+  display: inline;    
+}
+      
+div {
+  margin: auto;
+}   
+      
+hr {
+  border: 1px solid #777777;
+  border-radius: 10px;
+}
+
+#trivia-block {
   font-family: 'Times New Roman', Times, serif; 
-  margin-top: 5px;
-    padding: 20px;
-    width: 95%;
-    max-width: 960px; 
-    top: 125px;}   
+  width: 95%;
+  max-width: 960px;
+  padding: 10px;
+  background: rgba(255, 255, 255, 0.5);
+  margin-bottom: 70px;
+  text-align: center;
+}   
   
-  
-    
-   #main-container {
-    padding-top: 80px;
-    
-  } 
-  
+#show-number{
+  float: right;
+}
 
-  .main-section {
-    text-align: left;
+#game {
+  background-color: white;
+  background-image: url("../../../Done-in-a-Giphy/assets/images/blue.jpg");
+  background-size: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  max-width: 960px; 
+  top: 125px;
+}
+
+h3 {
+  font-size: 20px;
+  color:navy;
+  margin-bottom: 20px;
+}
     
-    padding: 20px;
-    background-image: url("../images/background.jpg");
-    border-color: #dddddd;
-    border: 1px solid;
-    margin-top: 40px;
-    margin-bottom: 90px;
-    width: 100%;
-    max-width: 960px;   
-    margin-left: auto;
-    margin-right: auto; 
-    position: relative;
-    height: 100%;
-   
-  }
+img {
+  padding-top: 20px;
+  width: 50%;
+  border: 0 none;
+  opacity: 0.8;
+}
+    
+button {
+  background-color: navy;
+  color: white;
+  border-color: red;
+  padding: 5px;
+  margin: 5px;
+ }
+
+ #buttons {
+   display: block;
+   text-align: center;
+ }
+
+footer {
+  background-color: #666666;
+  position: fixed;
+  width: 100%;
+  border-top: 8px solid #4aaaa5;
+  left: 0;
+  bottom: 0;
+  color: white;
+  text-align: center;
+  font-size: 12px;
+  height: 50px;
+  line-height: 3;
+}
   
-  header {
-    position:fixed;
+.row {
+  width: 95%;
+  margin-top: 30px;
+  max-width: 960px;
+  overflow: auto; 
+  clear: both;
+}
+
+.column-1 {
+  float: left;
+  width: 50%;
+  margin: auto;
+  padding: 0 10px 0 0
+}
+
+.column-2 {
+  float: right;
+  width: 50%;
+  padding: 0 0 0 10px;
+}
+
+.column-2 h2 {
+  padding-left: 55%;
+}
+
+#score {
+  margin-bottom: 20px;
+}
+
+#score .column-1 {
+  width: 25%;
+  margin: auto;
+  text-align: center;
+  padding: 0 10px 0 0
+}
+
+#score .column-2 {
+  float: left;
+  width: 25%;
+  margin: auto;
+  text-align: center;
+  padding: 0 10px 0 10px;
+}
+
+#score .column-2 h2 {
+  padding-left: 0%;
+}
+
+#score .column-3 {
+  float: left;
+  width: 25%;
+  margin: auto;
+  text-align: center;
+  padding: 0 10px 0 10px;
+}
+
+#score .column-4 {
+  float: left;
+  width: 25%;
+  margin: auto;
+  text-align: center;
+  padding: 0 0 0 10px;
+}
+
+.modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
+  padding-top: 100px; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(14,4,92); 
+  background-color: rgba(14,4,92,0.5); 
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%;
+  text-align: center;
+}
+
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 940px) {
+  .column-2 h2 {
+    padding-left: 45%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .main-section {
     width: 100%;
-    margin: -10px 0 30px;
-    overflow:auto;
-    background: #ffffff;
-    border-color: #cccccc;
-    border-bottom:  2px  solid;
-    z-index: 99;
-    
+    margin-left: 0px
+  }
+
+  .column-2 h2 {
+    padding-left: 35%;      
+  }
+}
+
+@media screen and (max-width: 640px) {
+  header {
+    position: static;
+    width: 640px;
+    margin-bottom: 10px;
   }
 
   #logo {
-    float: left;
-    width: 250px;
-    height: 90px;
-    font-family: Georgia, Times, "Times New Roman", serif;
-    font-size: 30px;
-    font-weight: 700;
-    line-height: 90px;
-    color: #ffffff;
-    text-align: center;
-    text-decoration: none;
-    background: #4aaaa5;
-    margin-left: 20px;
+    width: 100%;
+    margin-left: 0px;
+    clear: both; 
   }
-
-  nav {
-    float: right;
-    margin-top: 10px;
-    font-size: 24px;
-    height: 80px;
+    
+  nav { 
+    margin-left: 0px;
+    clear: both; 
+    float: none;   
+    text-align: center;          
   }  
 
-  nav a {
-    text-decoration: none;
-    color: #777777;
+  .dropdown-content a {
+    padding: 5px 10px;
   }
-
-  nav a:hover:not(.active) {
-    background-color: #4aaaa5;
-  }
-
-  .links {
-    display: inline-block;
-    border-right: 1px  solid #bbb;
-    padding: 0px 15px;      
-    border-radius: 0px;    
-    margin-top: 15px; 
+  
+  #main-container {
+    padding-top: 10px;
   } 
-
-  #links-last-child {
-    display: inline-block;
-    padding: 0px 15px;         
-    border-right: 0 none;
-  }
-
-  
-   h2
-  {
-    font-size: 20px;
-    color:navy;
-  }
-
-  h1 {
-    font-family: Georgia, Times, "Times New Roman", serif;
-   font-weight: 700;
-   color: #4aaaa5;
-    font-size: 24px;
-    margin: -20px;
-    background-color: white;
+      
+  .main-section {
     width: 100%;
-    max-width: 960px; 
-    height: 50px;
-    line-height: 50px;
-    position: absolute;
-    
-    text-indent: 20px;
-    
-    top: 0%;
+    margin-left: 0px
+  }
 
-  }   
-      
-   div {
-       margin: auto;
-       width: 960px;
-   }   
-      
-  hr {
-    border: 1px solid #777777;
-    border-radius: 10px;
-    background-color: white;
-    top: 20px;
-    position: absolute;
-    max-width: 960px; 
-    width: 95%;
-    height: 2px;
-    
-    
+  .column-2 h2 {
+    padding-left: 25%;  
+  }
 
-  }
-  #one-more{
-      display: inline;;
-  }
-  #title {
-      
-      float: left;
-      width: 95%;
-  }
-  #show-number{
-      float: right;
-  }
-  #game {
-    background-color: white;
-    margin-top: 5px;
-    padding: 20px;
-    width: 95%;
-    max-width: 960px; 
-    top: 125px;}
-
-    #game h3 {
-        font-size: 20px;
-    color:navy;
-    }
-    
-   img {
+  #score .column-1 {
     width: 50%;
-    border: 0 none;
-    opacity: 0.8;
-   }
+  }
     
-
-  
-  button {
-      background-color: navy;
-      color: white;
-      border-color: red;
-      padding: 5px;
-      margin: 5px;
-      
-  }
-
-footer {
-      background-color: #666666;
-      position: fixed;
-      width: 100%;
-      border-top: 8px solid #4aaaa5;
-      left: 0;
-      bottom: 0;
-      color: white;
-      text-align: center;
-      font-size: 12px;
-      height: 50px;
-      line-height: 3;
-  }
-  
-  .row {
-    width: 100%;
-    overflow: auto; 
-    clear: both;
-    display: inline-block; 
-  }
-
-  .column-1 {
-    float: left;
+  #score .column-2 {
     width: 50%;
-    margin: auto;
-    padding: 0 10px 0 0;
-
   }
-  .column-2 {
-    float: right;
+
+  #score .column-3 {
     width: 50%;
-    padding: 0 0 0 10px;
-
   }
 
-  
-
- @media screen and (max-width: 980px) {
-   .header {
-     width: 980px;
-   }
-   .main-section {
-     width: 55%;
-     margin-left: 30px
-    }
-
-    @media screen and (max-width: 768px) {
-
-      .main-section {
-        width: 100%;
-        margin-left: 0px
-      }
-      #bio-image {
-        width: 50%;
-    }
+  #score .column-4 {
+    width: 50%;
   }
-
-   @media screen and (max-width: 640px) {
-     
-    #main-container {
-      padding-top: 0px;
-    } 
-    
-    header {
-        position: static;
-        width: 640px;
-        width: 100%;   
-      }
-
-      #logo {
-        width: 100%;
-        margin-left: 0px;
-        clear: both; 
-      }
-
-      nav {
-        margin: auto;
-        width: 100%;
-        text-align: center;          
-      }  
-
-      .main-section {
-        width: 100%;
-        margin-left: 0px
-      }
-
-      #bio-image {
-        width: 100%;
-        margin-bottom: 10px;
-      }
-    .column-1 {
-        width: 100%;
-        padding: 0 0 0 0;
-
-      }
-      .column-2 {
-        width: 100%;
-        padding: 0 0 0 0;
-
-      }
         
-      }
-
-
-
-    }
+}
