--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@ body, html {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
   color: #777777;
-  background: #4aaaa5;
+  background-color: #043634;
   background-image: url("../../../Responsive-Portfolio/assets/images/another.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -50,8 +50,7 @@ header {
   width: 100%;
   margin: -10px -10px 40px;
   background-color: #043634;
-  border-color: #cccccc;
-  border-bottom:  2px  solid;
+  border-bottom:  2px  solid #cccccc;
   z-index: 99;
   opacity: 0.9;
 }
@@ -177,10 +176,15 @@ hr {
   background: rgba(255, 255, 255, 0.5);
   margin-bottom: 70px;
   text-align: center;
-}   
+}  
+
+#countdown {
+  text-align: right;
+}
   
 #show-number{
   float: right;
+  width: 27px;
 }
 
 #game {
@@ -219,18 +223,24 @@ button {
    text-align: center;
  }
 
-footer {
-  background-color: #666666;
+ footer {
   position: fixed;
   width: 100%;
-  border-top: 8px solid #4aaaa5;
+  font-family: Georgia, Times, "Times New Roman", serif;
   left: 0;
   bottom: 0;
   color: white;
   text-align: center;
   font-size: 12px;
-  height: 50px;
-  line-height: 3;
+  z-index: 99;
+  opacity: 0.9;
+  background-color: #043634;
+  border-color: #cccccc;
+  border-top:  2px  solid #cccccc;
+}
+
+footer p {
+  padding: 12px 0;
 }
   
 .row {
@@ -252,10 +262,7 @@ footer {
   float: right;
   width: 50%;
   padding: 0 0 0 10px;
-}
-
-.column-2 h2 {
-  padding-left: 55%;
+  
 }
 
 #score {
@@ -301,13 +308,12 @@ footer {
   display: none; 
   position: fixed; 
   z-index: 1; 
-  padding-top: 100px; 
+  padding-top: 350px; 
   left: 0;
   top: 0;
   width: 100%; 
   height: 100%; 
   overflow: auto; 
-  background-color: rgb(14,4,92); 
   background-color: rgba(14,4,92,0.5); 
 }
 
@@ -334,28 +340,30 @@ footer {
   cursor: pointer;
 }
 
-@media screen and (max-width: 940px) {
-  .column-2 h2 {
-    padding-left: 45%;
-  }
-}
-
 @media screen and (max-width: 768px) {
   .main-section {
     width: 100%;
     margin-left: 0px
-  }
-
-  .column-2 h2 {
-    padding-left: 35%;      
   }
 }
 
 @media screen and (max-width: 640px) {
   header {
     position: static;
-    width: 640px;
-    margin-bottom: 10px;
+    width: auto;
+    margin: -8px -8px 10px;
+  }
+
+  footer {
+    position: static;
+    width: auto;
+    margin: auto -8px -8px;
+    opacity: 1;
+    border-radius: 0px;
+  }
+
+  footer p {
+    padding-bottom: 8px;
   }
 
   #logo {
@@ -382,10 +390,6 @@ footer {
   .main-section {
     width: 100%;
     margin-left: 0px
-  }
-
-  .column-2 h2 {
-    padding-left: 25%;  
   }
 
   #score .column-1 {
